reservation ressource correction
